test/files/neg/t11607.scala
import scala.annotation.migration
@migration("", "") class C
