test/files/neg/t11607.check
t11607.scala:2: error: not found: type migration
@migration("", "") class C
 ^
1 error
